EB-2003-12-22-1: Bugfix:    fixed bug
                            * installation script should use "queue"
                              object specifier for -?attr options of qconf
                 Review:    MD

EB-2003-12-22-1: Bugfix:    fixed bug
                            * memory leak in sge_qmaster during modification
                              of CQs comlex_values 
                 Review:    CR

EB-2003-12-22-0: Bugfix:    fixed bug
                            * memory access error in libs/uti/sge_hostname.c
                 Review:    CR

EB-2003-12-20-0: Bugfix:    fixed bug
                            * honour initial state correctly
                            * object_spec for ?attr options for CQs is "queue"
                            * qconf -shgrp_tree
                            * qconf -shgrp_resolved
                            * more detailed error messages for CQ parsing

AD-2003-12-19-0: Enhancem.: Added new monitoring class 'LOCK'
                 Changed:   util, lck, rmon
                 Review:    AH

SG-2003-12-19-1: Bugfix:    The fix ensures, that a job task is not used
                            with the -hold_jid flag together and that in
                            qalter only job_tasks are acepted, when they
                            are allowed.
                 Review:    AS                            
                 Issue:     551
                 bugtraq:   4969825
                 Changed:   qmaster, qalter, submit.1

SG-2003-12-19-0: Enhancem.: Enabled the event master to work with the cluster
                            queues. Added a filter for cqueues and iqueues
                            in the scheduler.
                 Changed:   scheduler, qmaster                          
                 Review:    JG

JG-2003-12-18-1: Enhancem.: Made Berkeley DB spooling thread safe.
                            Cleanup.
                 Review:    AD
