@@ -1,3 +1,6 @@
+AD-2003-12-22-0: Bugfix:    Did add missing header file
+                 Changed:   sgeobj
+
 EB-2003-12-22-1: Bugfix:    fixed bug
                             * installation script should use "queue"
                               object specifier for -?attr options of qconf
